[gd_scene load_steps=19 format=2]

[ext_resource path="res://asserts/art/OilLamp.png" type="Texture" id=1]
[ext_resource path="res://asserts/art/Book.png" type="Texture" id=2]
[ext_resource path="res://SplitScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://asserts/art/blackBookmark.png" type="Texture" id=4]
[ext_resource path="res://CreateScene.tscn" type="PackedScene" id=5]
[ext_resource path="res://Book.gd" type="Script" id=6]
[ext_resource path="res://asserts/art/cyanBookmark.png" type="Texture" id=7]
[ext_resource path="res://asserts/art/pinkBookmark.png" type="Texture" id=8]
[ext_resource path="res://asserts/art/hoverBox.png" type="Texture" id=9]
[ext_resource path="res://asserts/themes/正文字体.tres" type="Theme" id=10]
[ext_resource path="res://CreateBookHoverBox.gd" type="Script" id=11]
[ext_resource path="res://SplitBookHoverBox.gd" type="Script" id=12]
[ext_resource path="res://DictBookHoverBox.gd" type="Script" id=13]
[ext_resource path="res://asserts/art/downArrow.png" type="Texture" id=14]
[ext_resource path="res://DictScene.tscn" type="PackedScene" id=15]
[ext_resource path="res://TreeScene.tscn" type="PackedScene" id=16]
[ext_resource path="res://asserts/art/redBookmark.png" type="Texture" id=17]
[ext_resource path="res://TreeBookHoverBox.gd" type="Script" id=18]

[node name="BookScene" type="Node2D"]
script = ExtResource( 6 )

[node name="OilLamp" type="TextureRect" parent="."]
margin_left = 1032.0
margin_right = 1968.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true

[node name="Book" type="TextureRect" parent="."]
margin_left = 8.0
margin_right = 1024.0
margin_bottom = 1080.0
texture = ExtResource( 2 )
expand = true

[node name="CreateScene" parent="Book" instance=ExtResource( 5 )]

[node name="SplitScene" parent="Book" instance=ExtResource( 3 )]

[node name="DictScene" parent="Book" instance=ExtResource( 15 )]

[node name="TreeScene" parent="Book" instance=ExtResource( 16 )]

[node name="CreateBookmark" type="TextureButton" parent="."]
margin_left = 960.0
margin_top = 112.0
margin_right = 1024.0
margin_bottom = 192.0
texture_normal = ExtResource( 7 )
expand = true

[node name="SplitBookmark" type="TextureButton" parent="."]
margin_left = 960.0
margin_top = 232.0
margin_right = 1024.0
margin_bottom = 312.0
texture_normal = ExtResource( 8 )
expand = true

[node name="DictBookmark" type="TextureButton" parent="."]
margin_left = 960.0
margin_top = 352.0
margin_right = 1024.0
margin_bottom = 432.0
texture_normal = ExtResource( 4 )
expand = true

[node name="TreeBookmark" type="TextureButton" parent="."]
margin_left = 960.0
margin_top = 472.0
margin_right = 1024.0
margin_bottom = 552.0
texture_normal = ExtResource( 17 )
expand = true

[node name="CreateBookHoverBox" type="TextureRect" parent="."]
margin_left = 1056.0
margin_top = 128.0
margin_right = 1176.0
margin_bottom = 176.0
texture = ExtResource( 9 )
expand = true
script = ExtResource( 11 )

[node name="CreateBookHoverText" type="Label" parent="CreateBookHoverBox"]
margin_right = 120.0
margin_bottom = 48.0
theme = ExtResource( 10 )
custom_colors/font_color = Color( 0.47451, 0.333333, 0.282353, 1 )
text = "合成界面"
align = 1
valign = 1

[node name="SplitBookHoverBox" type="TextureRect" parent="."]
margin_left = 1056.0
margin_top = 248.0
margin_right = 1176.0
margin_bottom = 296.0
texture = ExtResource( 9 )
expand = true
script = ExtResource( 12 )

[node name="SplitBookHoverText" type="Label" parent="SplitBookHoverBox"]
margin_right = 120.0
margin_bottom = 48.0
theme = ExtResource( 10 )
custom_colors/font_color = Color( 0.47451, 0.333333, 0.282353, 1 )
text = "切割界面"
align = 1
valign = 1

[node name="DictBookHoverBox" type="TextureRect" parent="."]
margin_left = 1056.0
margin_top = 368.0
margin_right = 1176.0
margin_bottom = 416.0
texture = ExtResource( 9 )
expand = true
script = ExtResource( 13 )

[node name="DictBookHoverText" type="Label" parent="DictBookHoverBox"]
margin_right = 120.0
margin_bottom = 48.0
theme = ExtResource( 10 )
custom_colors/font_color = Color( 0.47451, 0.333333, 0.282353, 1 )
text = "词典列表"
align = 1
valign = 1

[node name="TreeBookHoverBox" type="TextureRect" parent="."]
margin_left = 1056.0
margin_top = 488.0
margin_right = 1176.0
margin_bottom = 536.0
texture = ExtResource( 9 )
expand = true
script = ExtResource( 18 )

[node name="TreeBookHoverText" type="Label" parent="TreeBookHoverBox"]
margin_right = 120.0
margin_bottom = 48.0
theme = ExtResource( 10 )
custom_colors/font_color = Color( 0.47451, 0.333333, 0.282353, 1 )
text = "解锁单词"
align = 1
valign = 1

[node name="ExitHoverBox" type="TextureRect" parent="."]
margin_left = 1088.0
margin_top = 872.0
margin_right = 1208.0
margin_bottom = 920.0
texture = ExtResource( 9 )
expand = true
script = ExtResource( 11 )

[node name="ExitHoverText" type="Label" parent="ExitHoverBox"]
margin_right = 120.0
margin_bottom = 48.0
theme = ExtResource( 10 )
custom_colors/font_color = Color( 0.47451, 0.333333, 0.282353, 1 )
text = "关灯离开"
align = 1
valign = 1

[node name="ExitArrow" type="TextureButton" parent="."]
margin_left = 1088.0
margin_top = 936.0
margin_right = 1208.0
margin_bottom = 1024.0
texture_normal = ExtResource( 14 )
expand = true
